--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,23 @@ body {
   font-family: "Staatliches", "Open Sans", sans-serif;
 }
 
+.row {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Staatliches", sans-serif;
+}
+
+.h7 {
+  font-size: 0.5em;
+
+}
+
+h5, .forecast {
+  font-weight: bold;
 }
 
 h1 {
@@ -18,6 +32,11 @@ h1 {
   text-align: center;
   font-family:  sans-serif;
   font-weight:  bolder;
+}
+
+.card {
+  min-width: 80%; 
+  justify-content: left;
 }
 
 
