--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,25 @@ h1, h2, h3, h4, h5, h6 {
 
 .h7 {
   font-size: 0.5em;
-
 }
+
+.today {
+  font-family: "Staatliches", "Open Sans", sans-serif;
+  font-size: 1.1em;
+}
+
+.local1 {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  text-align: bottom;
+}
+
+.local2 {
+  margin-top: 0;
+  padding-top: 0;
+  font-size: 0.85em;
+}
+
 
 h5, .forecast {
   font-weight: bold;
