--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,13 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 0.85em;
 }
 
+.local3 {
+  margin-bottom: 5px;
+  padding-bottom: 0;
+  text-align: bottom;
+  font-size: 1em;
+}
+
 
 h5, .forecast {
   font-weight: bold;
