--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,15 +85,6 @@ h1 {
   margin-bottom: 0px;
 }
 
-.daycard {
-  background-color: blue;
-  color: white;
-  padding-left: 0;
-  min-width: 15%;
-  justify-content: left;
-  text-align: left;
-  font-size: .8em;
-}
 
 
 /* General list style */
@@ -102,8 +93,14 @@ ul.list-group {
 }
 
 .daycard, ul {
+  background-color: blue;
+  color: white;
   list-style-type: none;
+  min-width: 15%;
   justify-content: left;
   text-align: left;
+  padding-top: 5px;
+  padding-left: 5px;
+  font-size: .9em;
 }
 
