--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,3 +104,17 @@ ul.list-group {
   font-size: .9em;
 }
 
+
+/* Define the style for the 'text buttons', used for the 'previous city" list */
+.btn {
+  border: none;
+  background-color: inherit;
+  color: blue;
+  padding: 5px 0 5px 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #eeeeee;
+}
