--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,27 @@ body {
   font-family: "Staatliches", "Open Sans", sans-serif;
 }
 
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.day-panels {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.day-card {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.city-input {
+  min-width: 255px;
+}
+
 .row {
   margin-left: 5px;
   margin-right: 5px;
@@ -96,7 +117,7 @@ ul.list-group {
   background-color: blue;
   color: white;
   list-style-type: none;
-  min-width: 15%;
+  min-width: 19%;
   justify-content: left;
   text-align: left;
   padding-top: 5px;
@@ -117,4 +138,20 @@ ul.list-group {
 
 .btn:hover {
   background: #eeeeee;
+}
+
+
+/* Define the 'media query' styles.  */
+/* Media queries should always be last in the style sheet. */
+/* Media query style for smaller desktop screens and smaller than 980. */
+
+@media screen and (max-width: 780px) {
+  form .container-fluid {
+    flex: 1 100%;
+  }
+
+ /* .day-panels {
+    flex-basis: 100%;
+  }  */
+
 }
