--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ ul.list-group {
   border: none;
   background-color: inherit;
   color: blue;
-  padding: 5px 0 5px 5px;
+  padding: 5px 5px 5px 5px;
   font-size: 16px;
   cursor: pointer;
 }
